Kata 9
Se resuelve ejercicio 9.
Se aplana la movielist para accer a sus caracteristicas, se hace un metodo Map para obtener los valores pedidos ID,Title,moment y url. en momente se debe hacer un map adicional desde su getInterestingMoment y se guarda en una lista, luego a la url accedemos desde la BoxArt haciendo un frilto con la condicion de el ancho menor o igual a 150. una vez hecho esto con un map adicional tomanos la URL de las boxart que cumplan esta condicion. se guardan nuevamnete en una lista.