@@ -10,6 +10,7 @@ import util.DataUtil;
 import java.util.Date;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 /*
     Goal: Retrieve each video's id, title, middle interesting moment time, and smallest box art url
@@ -19,7 +20,14 @@ import java.util.Map;
 public class Kata9 {
     public static List<Map> execute() {
         List<MovieList> movieLists = DataUtil.getMovieLists();
-
-        return ImmutableList.of(ImmutableMap.of("id", 5, "title", "some title", "time", new Date(), "url", "someUrl"));
+        List<Map> movies = movieLists.stream().flatMap(element -> element.getVideos().stream())
+                .map(movie -> Map.of(
+                        "movieId: ", movie.getId(),
+                        "title: ", movie.getTitle(),
+                        "moment: ", movie.getInterestingMoments().stream().map(timeInteresting -> timeInteresting.getTime()).collect(Collectors.toList()),
+                        "url", movie.getBoxarts().stream().filter(size -> size.getWidth() <= 150)
+                                .map(url -> url.getUrl()).collect(Collectors.toList()))).collect(Collectors.toList());
+        System.out.println(movies);
+        return movies;
     }
 }
